<resources>
    <string name="app_name">BreakfastGenerator</string>
    <string name="fragment_1_text">Fragment_1</string>
    <string name="fragment_2_text">Your breakfast is:</string>
    <string name="header">Your breakfast will be with:</string>
    <string name="_1_var">1 dish and 1 drink</string>
    <string name="_2_var">2 dishes and 1 drink</string>
    <string name="_3_var">Surprise me</string>
    <string name="generate">Generate</string>
    <string name="back">I want smt else</string>
    <string name="cooking_time">COOKING TIME</string>
    <string name="ingredients">INGREDIENTS</string>
</resources>
