<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/firstFragment"
              android:background="@drawable/purty_wood">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        android:text="@string/header"
        android:id="@+id/header"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_var"
            android:textSize="@dimen/RadioButtonTextSize"
            android:layout_marginStart="40sp"
            android:id="@+id/firstVar"
            android:checked="true"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_var"
            android:textSize="@dimen/RadioButtonTextSize"
            android:layout_marginStart="40sp"
            android:id="@+id/secondVar"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_var"
            android:textSize="@dimen/RadioButtonTextSize"
            android:layout_marginStart="40sp"
            android:id="@+id/thirdVar"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/generateBtn"
        android:text="@string/generate"
        android:textSize="@dimen/textSize"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>